correct picture spacing and coloring - adding sticky footer

--- a/style.css
+++ b/style.css
@@ -37,27 +37,28 @@ body {
 
 .header2 {padding: 25px;
     font-weight: 600;
+    text-align: left;
     color: #4aaaa5;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 24px;
     background: #ffffff;
-    border-bottom: 2px solid #dddd;
-    margin: 0px 20px;
-    margin-bottom: 30px;
-        
+    margin-left:12px;
+}
+
+#border { border-bottom: 2px solid #dddddd;
 }
 
 img {float: left;
-    margin-right: 10px;   
+    margin: 0px 20px 0px 35px;
 }
 
 .info {background: #ffffff;   
-    margin-top: 15px;
 }
 
 p {font-family: Arial, Helvetica, sans-serif;
+    color: #777777;
     font-size: 16px;
-    margin-left: 10px;
+    margin-left: 20px;
     font-weight: 400;
     line-height: 175%;
     
